# dir-metadata

./: README.markdown  dir-metadata.cabal
src/: DirMetadata.hs  Main.hs
src/DirMetadata/: Persist.hs
